--- a/submissions/mcclellan_julian/a3/interactive.Rmd
+++ b/submissions/mcclellan_julian/a3/interactive.Rmd
@@ -7,7 +7,7 @@ runtime: shiny
 ---
 
 
-```{r}
+```{r, eval = F}
 library(tidyverse)
 library(readxl)
 
@@ -48,7 +48,6 @@ export_dat <- import_gapminder("~/dataviz/assignments/data/Exports (p of GDP).xl
   select(country, year, value) %>%
   rename(export_perc_gdp = value) 
 
-table_dat <- 
 
 table_dat <- for_invest_in_dat %>%
   merge(for_invest_out_dat, by = c("country", "year")) %>%
@@ -58,7 +57,10 @@ table_dat <- for_invest_in_dat %>%
          fdi_out = for_invest_out_perc_gdp,
          imports = import_perc_gdp,
          exports = export_perc_gdp) %>%
-  mutate(net_exports = exports - imports)
+  mutate(net_exports = exports - imports,
+         date = as.character(year))  %>%
+  mutate(date = paste(date, "0101", sep = "")) %>%
+  mutate(date = ymd(date))
 
 full_dat <- table_dat %>%
   gather(key = measure, value = perc_of_gdp,
@@ -83,7 +85,7 @@ full_dat %>%
          (year_start <= year) & (year <= year_end),
          measure %in% measures
          ) %>%
-  mutate(measure = ifelse(measure == "fdi_out", "FDI (out)", 
+  mutate(meaure = ifelse(measure == "fdi_out", "FDI (out)", 
                            ifelse(measure == "fdi_in", "FDI (in)", 
                                   ifelse(measure == "net_exports", "Net Exports",
                                          ifelse(measure == "exports", "Exports", "Imports"))))) %>% 
@@ -114,7 +116,37 @@ full_dat %>%
          y = "% of GDP",
          title = create_two_country_lab(measure_of_int, countries_to_compare),
          color = "Country")
+
+write_csv(full_dat, "~/dataviz/submissions/mcclellan_julian/a3/full_dat.csv")
+write_csv(table_dat, "~/dataviz/submissions/mcclellan_julian/a3/table_dat.csv")
 ```
+
+```{r}
+library(tidyverse)
+library(scales)
+full_dat <- read_csv("full_dat.csv")
+table_dat <- read_csv("table_dat.csv")
+theme_set(theme_minimal())
+```
+
+# Introduction 
+
+A country's interaction with the global economy is most generally seen as in terms
+of imports and exports, how much goods and services a country brings in from other countries,
+and how goods and services that country sends to other countries.
+
+However, there is also the concept of Foreign Direct Investment (FDI) net outflow and
+inflow. According to the [World Bank](https://datahelpdesk.worldbank.org/knowledgebase/articles/114954-what-is-the-difference-between-foreign-direct-inve):
+
+"FDI net inflows are the value of inward direct investment made by non-resident investors in the reporting economy. FDI net outflows are the value of outward direct investment made by the residents of the reporting economy to external economies."
+
+Thus, FDI net inflows and outflows reveal another dimension of country-level interaction
+with the Global economy. Together with imports and exports, which are also measured in % of GDP,
+they help reveal how much the global economy is embedded in a particular country's economy in terms of investment and exchange of goods, but also compare and contrast the country's domestic economy to it's international economy. You'll see that the global economy is a massive fraction of Singapore's economy, that of a a small city-state, compared to the United States, which is large enough to support independent and diverse domestic sectors.
+
+
+Country Analysis and Comparison {data-orientation=rows}
+=====================================  
 
 Column {.sidebar}
 -----------------------------------------------------------------------
@@ -136,7 +168,7 @@ Compare measures in for a single country
 selectInput("country_of_int", "Country", sort(unique(full_dat$country)),
             selected = "United States")
 
-checkboxGroupInput("measures", "Trade measures",
+checkboxGroupInput("measures", "Trade measures:",
                c("Foreign Direct Investment Net Inflow" = "fdi_in",
                  "Foreign Direct Investment Net outflow" = "fdi_out",
                  "Net Exports" = "net_exports",
@@ -155,9 +187,9 @@ selectInput("country_1", "", sort(unique(full_dat$country)),
 
 
 selectInput("country_2", "", sort(unique(full_dat$country)),
-                selected = "China")
+                selected = "Singapore")
 
-radioButtons("measure", "Trade measures",
+radioButtons("measure", "Trade measures:",
                c("Foreign Direct Investment Net Inflow" = "fdi_in",
                  "Foreign Direct Investment Net outflow" = "fdi_out",
                  "Net Exports" = "net_exports",
@@ -189,15 +221,23 @@ singleCountryData <- reactive({
                                            ifelse(measure == "exports", "Exports", "Imports")))))
 })
 
+calc_breaks <- function(year_start, year_end){
+  if (year_start - year_end < 5){
+    year_end - year_start
+  } else {}
+}
+
 renderPlot({
-  ggplot(singleCountryData(), aes(year, perc_of_gdp, color = measure)) +
+  ggplot(singleCountryData(), aes(date, perc_of_gdp / 100, color = measure)) +
     geom_line() + 
     geom_hline(yintercept = 0, linetype = "dashed", size = .25) +
     labs(title = input$country_of_int,
          x = "Year",
          y = "% of GDP",
          color = "Measures"
-         )
+         ) + 
+    scale_y_continuous(labels = scales::percent) + 
+    scale_x_date(date_labels = "%Y")
 })
 ```
 
@@ -235,22 +275,24 @@ twoCountryData <- reactive({
 })
 
 renderPlot({
-  ggplot(twoCountryData(), aes(year, perc_of_gdp, color = country)) +
+  ggplot(twoCountryData(), aes(date, perc_of_gdp / 100, color = country)) +
     geom_line() +
     geom_hline(yintercept = 0, linetype = "dashed", size = .25) + 
     labs(x = "Year", 
          y = "% of GDP",
          title = create_two_country_lab(input$measure, twoCountries()),
-         color = "Country")
-})
+         color = "Country")  +
+    scale_y_continuous(labels = scales::percent) + 
+    scale_x_date(date_labels = "%Y")
+    })
 ```
 
 
 
-Row {.tabset .tabset-fade}
+Row {.tabset .tabset-fade }
 -------------------------------------
    
-### Single Country Data
+### Single Country Analysis
 
 ```{r}
 singleCountryTab <- reactive({
@@ -259,13 +301,14 @@ singleCountryTab <- reactive({
            (input$year_start <= year) & (year <= input$year_end),
            measure %in% input$measures
            ) %>%
+    select(-date) %>%
     mutate(measure = ifelse(measure == "fdi_out", "FDI (out)", 
                              ifelse(measure == "fdi_in", "FDI (in)", 
                                     ifelse(measure == "net_exports", "Net Exports",
                                            ifelse(measure == "exports", "Exports", "Imports"))))) %>%
     spread(measure, perc_of_gdp)
 })
-renderTable(
+renderDataTable(
   singleCountryTab()
   )
 ```   
@@ -279,6 +322,7 @@ twoCountryTab <- reactive({
            (input$year_start <= year) & (year <= input$year_end),
            measure == input$measure
            ) %>%
+    select(-date) %>%
     mutate(measure = ifelse(measure == "fdi_out", "FDI (out)", 
                              ifelse(measure == "fdi_in", "FDI (in)", 
                                     ifelse(measure == "net_exports", "Net Exports",
@@ -288,7 +332,17 @@ twoCountryTab <- reactive({
     # reorder(year, `% of GDP`)
 })
 
-renderTable(
+renderDataTable(
   twoCountryTab()
   )
 ```
+
+# Explanation
+
+With my final project data set still being collected, I decided to utilize the Gapminder data set. However, without a distinctive narrative in my mind, I decided to create a more non-linear structure for my visualization. Generally speaking, the story is that the "global economy" is much more embedded in certain countries compared to others, and that this embedding has unique facets in investment and exchange of goods. Also, the global economy's relationship with a country can change over time. Since the unit of measurement is the percentage of GDP, this allows for comparison between countries, so another story could be how two country's measures (net exports, FDI, etc.) changed over time in relation to each other. Especially interesting is the response of some countries to the 2008 financial crisis. Depending on the viewer's knowledge of history from 1970-2010, the (non-)response of imports, exports, and foreign direct investment to any number of events can be seen.
+
+I selected a line chart because this allows the comparison of multiple (colored) measures over more than one year for both the single country analysis and dual country comparison. A single country analysis exists so that one could compare multiple measures against each other for the same country, and the dual country comparison line chart exists so one could compare one measure between 2 countries. For the comparison, I opted to only have one measure compared at a time in order to promote clarity so that comparison could be easier. 4 or 6 lines (2 and 3 measures of comparison) would have cluttered up the screen and made country comparison between each individual measure more difficult. Additionally, because plotly is it's own bag of worms, I opted to display data tables that contain the information used to construct each line chart so that the user could have a more granular basis of comparison. 
+
+Interactivity plays a very large part in this visualization. Firstly, it frames the visualization between the "Introduction" page and this current "Explanation" page, ensuring that users have access to content they need to understand the visualization and justification for its design. Of course, the level of interactivity also is what makes the visualization non-linear in structure. Users can look at 5 measures between 140 different countries from years ranging from 1970-2010 and compare those 5 measures between 9,730 unique pairs of countries.
+
+The interactivity in this visualization reduces the search cost that a user must pay in order to access the large number of individual and dual time series. Indeed, without interactivity, the only way to access this information would be thousands of graphs and tables. Additionally, the ability to select a custom date range allows the user to focus on specific periods of time; a use interested in the 2008 crisis would want to focus more on the 2000, than the previous 30 years that are technically available.
